Fix event text overflow, reverse task order

--- a/src/style.css
+++ b/src/style.css
@@ -77,16 +77,3 @@ button:focus-visible {
   text-align: center;
   width: 100vw;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    /* background-color: #ffffff; */
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
